[gd_scene load_steps=3 format=2]

[ext_resource path="res://GUI/StatsWindow/StatsWindow.gd" type="Script" id=1]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [  ],
"loop": true,
"name": "Idle",
"speed": 5.0
} ]

[node name="StatsWindow" type="Node2D"]
script = ExtResource( 1 )

[node name="Polygon2D" type="Polygon2D" parent="."]
position = Vector2( -127, -9 )
scale = Vector2( 2.53, 1 )
color = Color( 0, 0, 0, 0.443137 )
polygon = PoolVector2Array( 0, 0, 100, 0, 100, 100, 0, 100 )

[node name="DamageLabel" type="Label" parent="."]
margin_right = 40.0
margin_bottom = 14.0
text = "Damage: "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DamageValue" type="Label" parent="."]
margin_left = 61.0
margin_right = 121.0
margin_bottom = 14.0
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AttackSpeedLabel" type="Label" parent="."]
margin_top = 23.0
margin_right = 48.0
margin_bottom = 37.0
text = "Attack Speed: "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AttackSpeedValue" type="Label" parent="."]
margin_left = 92.0
margin_top = 23.0
margin_right = 152.0
margin_bottom = 37.0
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RangeLabel" type="Label" parent="."]
margin_top = 47.0
margin_right = 48.0
margin_bottom = 61.0
text = "Range: "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RangeValue" type="Label" parent="."]
margin_left = 49.0
margin_top = 47.0
margin_right = 109.0
margin_bottom = 61.0
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MoveSpeedLabel" type="Label" parent="."]
margin_top = 70.0
margin_right = 86.0
margin_bottom = 84.0
text = "Move Speed: "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MoveSpeedValue" type="Label" parent="."]
margin_left = 88.0
margin_top = 70.0
margin_right = 148.0
margin_bottom = 84.0
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Portrait" type="Control" parent="."]
margin_left = -101.0
margin_right = -24.0
margin_bottom = 79.0
rect_clip_content = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="Portrait"]
position = Vector2( 39, 42 )
scale = Vector2( 3, 3 )
frames = SubResource( 1 )
animation = "Idle"

[node name="Sprite" type="Sprite" parent="Portrait"]
position = Vector2( 39, 42 )
scale = Vector2( 0.8, 0.8 )
region_enabled = true
